# SimRAII

./: .gitignore  CMakeLists.txt
src/app/: main.cpp
src/gfx/: Dx11Device.cpp  Dx11Device.h
src/platform/: Win32Window.cpp  Win32Window.h
src/sim/: Sim.cpp  Sim.h
tests/: test_smoke.cpp
